--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
         <div class="message__area"></div>
         <div>
-            <textarea id="textarea" cols="30" rows="1" placeholder="Write a message..."></textarea>
-            <button>Send</button>
+            <textarea id="textarea" cols="30" placeholder="Write a message..."></textarea>
+            <button class="btn btn1" id="sendbtn" onclick="send()">Send</button>
         </div>
     </section>
     <script src="/socket.io/socket.io.js"></script>
